cracao do swagger para o metodo de listagem
